--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.4.1
   flutter_native_splash: ^2.4.3
+  smooth_page_indicator: ^1.2.0+3
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -38,7 +40,7 @@ flutter:
         - asset: assets/fonts/Poppins-Regular.ttf
     - family: Saira
       fonts:
-        - asset: assets/fonts/Saira_Condensed-Regular.ttf
+        - asset: assets/fonts/SairaCondensed-Regular.ttf
 flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/utils
