--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_native_splash: ^2.4.3
   smooth_page_indicator: ^1.2.0+3
   flutter_screenutil: ^5.9.3
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
