--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   flutter_screenutil: ^5.9.3
   shared_preferences: ^2.3.3
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
