--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,16 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: "^0.14.2"
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/appIcon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icons/appIcon.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
